String and List.txt
Python 2.7.14 (v2.7.14:84471935ed, Sep 16 2017, 20:19:30) [MSC v.1500 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> words = "It's thanksgiving day. It's my birthday,too!"
>>> words.find(day,beg=0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'day' is not defined
>>> words.find('day')
18
>>> words.replace('day','month')
"It's thanksgiving month. It's my birthmonth,too!"
>>> x = [2,54,-2,7,12,98]
>>> x.min()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'min'
>>> min(x)
-2
>>> max(x)
98
>>> x = ["hello",2,54,-2,7,12,98,"world"]
>>> x[0]
'hello'
>>> x[len(x)-1]
'world'
>>> y=[x[0],x[len(x)-1]]
>>> y
['hello', 'world']
>>> x = [19,2,54,-2,7,12,98,32,10,-3,6]
>>> x.sort()
>>> x
[-3, -2, 2, 6, 7, 10, 12, 19, 32, 54, 98]
>>> x[0]=[x[0],x[1],x[2],x[3],x[4]]
>>> x
[[-3, -2, 2, 6, 7], -2, 2, 6, 7, 10, 12, 19, 32, 54, 98]
>>>  x = [19,2,54,-2,7,12,98,32,10,-3,6]
  File "<stdin>", line 1
    x = [19,2,54,-2,7,12,98,32,10,-3,6]
    ^
IndentationError: unexpected indent
>>>  x = [19,2,54,-2,7,12,98,32,10,-3,^Z

  File "<stdin>", line 1
    x = [19,2,54,-2,7,12,98,32,10,-3,
    ^
IndentationError: unexpected indent
>>> x = [19,2,54,-2,7,12,98,32,10,-3,6]
>>> x.sort()
>>> x
[-3, -2, 2, 6, 7, 10, 12, 19, 32, 54, 98]
>>> y = x/2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for /: 'list' and 'int'
>>> len(x)
11
>>> words = "It's thanksgiving day. It's my birthday,too!"1
  File "<stdin>", line 1
    words = "It's thanksgiving day. It's my birthday,too!"1
                                                          ^
SyntaxError: invalid syntax
>>> x
[-3, -2, 2, 6, 7, 10, 12, 19, 32, 54, 98]
>>> len(x)
11
>>> len(x)-1
10
>>> (len(x)-1)/2
5
>>> y = [x[0],x[1],x[2],x[3],x[4]]
>>> y
[-3, -2, 2, 6, 7]
>>> x = [y,x[5],x[6],x[7],x[8]]
>>> x
[[-3, -2, 2, 6, 7], 10, 12, 19, 32]
>>>